64-bits statistics integer
While playing movie, input statistics "Read at media" gets negative. This happens after 2GB data have been read.
It seems that statistics counters are only 32bit signed integers. I think this counter should be 64bit to show correct stats for DVD movies.
Using 32-bit linux build of vlc 1.0.5.