statistics to 64bit

Didn't touch the os x interface code. I don't think I missed any core-code that relates.
Fixe #3411